Fixed some minor bugs.

--- a/heisenberg/heisenberg.tex
+++ b/heisenberg/heisenberg.tex
@@ -95,7 +95,7 @@ where the amplitude $\vb*A(\vb*k)$ now represents the amplitude of each wavecomp
 As a nice function in space one can of course also expand it with its Fourier Transform
 \begin{equation}
   \label{eq:f_exp}
-  \vb*E(\vb*x)=\frac{1}{\2\pi}\int_{\vb*k} \widetilde{\vb*E}(\vb*k) \ee^{\ii(\vb*k\cdot\vb*x - \omega t)}\id^3k.
+  \vb*E(\vb*x)=\frac{1}{2\pi}\int_{\vb*k} \widetilde{\vb*E}(\vb*k) \ee^{\ii(\vb*k\cdot\vb*x - \omega t)}\id^3k.
 \end{equation}
 
 
@@ -117,7 +117,7 @@ The common version of Heisenberg's uncertainty principle used in quantum mechani
 \Delta_{\vb*a}f \Delta_{\vb*\alpha} \widetilde{f} \geq \frac{9}{4}, \quad \forall \vb*a, \vb*\alpha, \forall f \in \Lsq[\infty].
 \end{equation}
 
-$\Delta_af$ is a measure of how spread out $\f$ is around a point $\vb*a$;
+$\Delta_af$ is a measure of how spread out $f$ is around a point $\vb*a$;
 \begin{equation}
   \label{eq:spread_def}
 \Delta_{\vb*a}f=\frac{\int_{\vb*x}\id^3x\abs{\vb*x-\vb*a}^2\abs{f(\vb*x)}}{\int_{\vb*x}\id^3x\abs{f(\vb*x)}}.
@@ -156,12 +156,12 @@ A square-integrable function $f$ of $D$ variables is said to be $\Omega$-limited
 that is, it only contains frequencies in the area $\Omega$.
 We define the energy of a function to be
 \begin{equation*}
-A=\int_{R^D}\abs{f(\id*x)}^2\id^3x.
+A=\int_{\R^D}\abs{f(\id*x)}^2\id^Dx.
 \end{equation*}
 By Parseval's theorem we get that
 \begin{equation*}
-
-  \end{equation*}
+\text{Must put something here, otherwise \LaTeX will be sad. }
+\end{equation*}
 
 
 
