--- a/numerics/references.bib
+++ b/numerics/references.bib
@@ -66,7 +66,14 @@
 
 
 
-
+@book{Gradshteyn-Ryzhik,
+    author    = "Gradshteyn, I S and Ryzhik, I M",
+    title     = "{T}able of {I}ntegrals, {S}eries, and {P}roducts",
+    year      = "1980",
+    edition   = "4",
+    publisher = "Academic Press",
+    isbn      = "0-12-294760-6"
+}
 
 @book{Physics_Handbook,
     author    = "Nordling, Carl and Österman, Jonny",
@@ -74,7 +81,6 @@
     year      = "2006",
     edition   = "8:6",
     publisher = "Studentlitteratur",
-    language  = {swedish}
 }
 
 @book{BETA,
@@ -84,6 +90,5 @@
     edition   = "5:12",
     year      = "2004",
     note      = "Informally known as ''BETA''",
-    language  = "english"
 }
 
