Added an appendix for the calculation of the Fourier coefficients of the frequency domain circle ring kernel.

--- a/ring/references.bib
+++ b/ring/references.bib
@@ -75,6 +75,16 @@
     isbn      = "0-12-294760-6"
 }
 
+@book{Arfken-Weber,
+    author    = "Arfken, G B and Weber, H J and Harris, F E",
+    title     = "{M}athematical {M}ethods for {P}hysisits",
+    year      = "2013",
+    edition   = "7",
+    publisher = "Academic Press",
+    isbn      = "978-0-12-384654-9"
+}
+
+
 @book{Physics_Handbook,
     author    = "Nordling, Carl and Österman, Jonny",
     title     = "{P}ysics {H}andbook for {S}cience and {E}ngineering",
